# KWDLC

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.files  test.ids  train.files
.github/: dependabot.yml
.github/workflows/: lint.yml  org.yml  release.yml  requirements.yml
disc/: README.md  disc.txt  disc_crowdsourcing.txt  disc_expert.txt  make_knp_file_with_discourse_annotation.py  requirements.txt
doc/: df990214.txt  disc_guideline.txt
id/: train.id
id/split_for_pas/: dev.id  train.id
knp/: w201106-0000060050.knp  w201106-0000060877.knp  w201106-0000061395.knp  w201106-0000062011.knp  w201106-0000064774.knp  w201106-0000065102.knp  w201106-0000066557.knp  w201106-0000066901.knp  w201106-0000067192.knp  w201106-0000068335.knp  w201106-0000069777.knp  w201106-0000071952.knp  w201106-0000072440.knp  w201106-0000073995.knp  w201106-0000077637.knp  w201106-0000080964.knp  w201106-0000083561.knp  w201106-0000084691.knp  w201106-0000085526.knp  w201106-0000086915.knp  w201106-0000088108.knp  w201106-0000098876.knp  w201106-0000099340.knp  w201106-0000100322.knp  w201106-0000100352.knp  w201106-0000100560.knp  w201106-0000102939.knp  w201106-0000104324.knp  w201106-0000106921.knp  w201106-0000107112.knp  w201106-0000107443.knp  w201106-0000107645.knp  w201106-0000107837.knp  w201106-0000108121.knp  w201106-0000108159.knp  w201106-0000109313.knp  w201106-0000109559.knp  w201106-0000111403.knp  w201106-0000111940.knp  w201106-0000112018.knp  (+1298 more)
scripts/: filter.py  knp_to_org.py  stat.py  utils.py
(+10358 files in other folders)
