[tool.poetry]
name = "KWDLC"
version = "1.1.1"
description = ""
authors = ["nobu-g <ueda-n127@hotmail.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rhoknp = "^1.6"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"

[tool.ruff]
line-length = 120
indent-width = 4
src = ["scripts"]
target-version = "py310"
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "E501",  # Line too long
    "RUF001",  # String contains ambiguous `ノ` (KATAKANA LETTER NO). Did you mean `/` (SOLIDUS)?
    "RUF002",  # Docstring contains ambiguous `，` (FULLWIDTH COMMA). Did you mean `,` (COMMA)?
    "RUF003",  # Comment contains ambiguous `（` (FULLWIDTH LEFT PARENTHESIS). Did you mean `(` (LEFT PARENTHESIS)?
    "COM812",  # Trailing comma missing
    "PLR2004",  # Magic value used in comparison
]
select = ["F", "E", "W", "I", "B", "PL", "PD", "NPY", "RUF", "UP", "TID", "COM", "PT"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
